{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 25,
  "lineage": "17886882-864c-553e-ff5e-0378f9618f0b",
  "resources": [
    {
      "module": "module.security_policies[\"api-throttle\"]",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "endpoint_throttling_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Cloud Armor policy for endpoint throttling",
            "fingerprint": "jInmkzq4p5Q=",
            "id": "projects/mathnasium-352013/global/securityPolicies/api-throttle",
            "name": "api-throttle",
            "project": "mathnasium-352013",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Default allow rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "throttle",
                "description": "Rate limit rule for /index.html",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "request.path.matches(\"/index.html\")"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": true,
                "priority": 1000,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 0,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "IP",
                    "enforce_on_key_configs": [],
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 100,
                        "interval_sec": 10
                      }
                    ]
                  }
                ],
                "redirect_options": []
              },
              {
                "action": "throttle",
                "description": "Rate limit rule for /index1.html",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "request.path.matches(\"/index1.html\")"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": true,
                "priority": 1001,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 0,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "IP",
                    "enforce_on_key_configs": [],
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 100,
                        "interval_sec": 10
                      }
                    ]
                  }
                ],
                "redirect_options": []
              },
              {
                "action": "throttle",
                "description": "Rate limit rule for /index2.html",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "request.path.matches(\"/index2.html\")"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": true,
                "priority": 1002,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 0,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "IP",
                    "enforce_on_key_configs": [],
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 100,
                        "interval_sec": 10
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mathnasium-352013/global/securityPolicies/api-throttle",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_policies[\"api2-throttle\"]",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "endpoint_throttling_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Cloud Armor policy for endpoint throttling",
            "fingerprint": "iYMABqSvYE4=",
            "id": "projects/mathnasium-352013/global/securityPolicies/api2-throttle",
            "name": "api2-throttle",
            "project": "mathnasium-352013",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Default allow rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "throttle",
                "description": "Rate limit rule for /index3.html",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "request.path.matches(\"/index3.html\")"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 0,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "IP",
                    "enforce_on_key_configs": [],
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 50,
                        "interval_sec": 60
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mathnasium-352013/global/securityPolicies/api2-throttle",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_policies[\"api3-throttle\"]",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "endpoint_throttling_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Cloud Armor policy for endpoint throttling",
            "fingerprint": "qKHymO5tpNo=",
            "id": "projects/mathnasium-352013/global/securityPolicies/api3-throttle",
            "name": "api3-throttle",
            "project": "mathnasium-352013",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Default allow rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "throttle",
                "description": "Rate limit rule for /index4.html",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "request.path.matches(\"/index4.html\")"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 0,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "IP",
                    "enforce_on_key_configs": [],
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 200,
                        "interval_sec": 30
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mathnasium-352013/global/securityPolicies/api3-throttle",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}